Se actualizan los archivos de variables, templates y playbooks
Se actualizan para agrupar variables según su tipo de uso o ejecución de máquina y se añade When Statement para evitar descargar el certificado de Let's Encrypt si no se llama a una variable con una cadena concreta

--- a/fase-0/ansible/templates/000-default.conf.j2
+++ b/fase-0/ansible/templates/000-default.conf.j2
@@ -1,11 +1,11 @@
 <VirtualHost *:80>
     #ServerName www.example.org
     ServerAdmin webmaster@localhost
-    DocumentRoot {{ DocumentRoot_directory }}
+    DocumentRoot {{ Template_000_default.DocumentRoot }}
 
     #LogLevel info ssl:warm
 
-    <Directory "{{ DocumentRoot_directory }}">
+    <Directory "{{ Template_000_default.DocumentRoot }}">
         AllowOverride All
     </Directory>
 
