--- a/fase-2/ansible/templates/000-default-balancer.conf.j2
+++ b/fase-2/ansible/templates/000-default-balancer.conf.j2
@@ -1,10 +1,10 @@
 <VirtualHost *:80>
     <Proxy balancer://cluster-frontend>
         # Frontend 1
-        BalancerMember http://{{ IP_HTTP_Server_1 }}
+        BalancerMember http://{{ Balancer.IP_HTTP_Server_1 }}
 
         # Frontend 2
-        BalancerMember http://{{ IP_HTTP_Server_2 }}
+        BalancerMember http://{{ Balancer.IP_HTTP_Server_2 }}
     </Proxy>
 
     ProxyPass / balancer://cluster-frontend/
