--- a/fase-2/ansible/templates/exports.j2
+++ b/fase-2/ansible/templates/exports.j2
@@ -1,1 +1,1 @@
-{{ Shared_directory }} {{ Range_AWS_Private_IP }}({{ NFS_Options }})
+{{ NFS_Server.Shared_directory_exports }} {{ NFS_Server.Range_AWS_Private_IP_exports }}({{ NFS_Server.NFS_Options_exports }})
