--- a/fase-2/ansible/templates/000-default-frontend.conf.j2
+++ b/fase-2/ansible/templates/000-default-frontend.conf.j2
@@ -1,11 +1,11 @@
 <VirtualHost *:80>
     #ServerName www.example.org
     ServerAdmin webmaster@localhost
-    DocumentRoot {{ DocumentRoot_directory }}
+    DocumentRoot {{ Frontend.DocumentRoot }}
 
     #LogLevel info ssl:warm
 
-    <Directory "{{ DocumentRoot_directory }}">
+    <Directory "{{ Frontend.DocumentRoot }}">
         AllowOverride All
     </Directory>
 
